--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon fa-gem"></span></div>
-							<h2>Mon modeste portfolio</h2>
-							<p>Un aperçu de mon travail grâce à <a href="http://html5up.net">HTML5 UP</a></p>
+							<div class="logo"><img src="images/banneer.jpg" width="50%"/><!--<span class="icon fa-gem"></span>---></div>
+							<h2>Alexis Jalabert</h2>
+							<p><span class="icon fa-gem"></span> Business Data Analyst</a></p>
 						</div>
 					</section>
 
@@ -55,11 +55,18 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="https://public.tableau.com/views/Airpollutionindicators_Insight/Tableau_v3?:language=fr-FR&:display_count=n&:origin=viz_share_link" class="image"><img src="images/projects/Air pollution indicators.png" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Magna arcu feugiat</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">Air quality monitoring</h2>
+										<p>This work takes part inside a european project in order to determine elements available to make a outdoor pollution map at an european level. 
+ 
+											Experts has build an index for this work in relation with the international air quality index. This index give a air quality classes (good, fair, moderate, poor, very poor, extremely poor) based on pollutant-specific ranges for each 5 key pollutants (particles < 2.5 µm, particles < 10 µm, nitrogen dioxide, ozone, sulfur dioxide).
+											
+											In addition, they have selected radon potential as indicator for soil pollution.
+											
+											Air quality consultants need data analysis skills to structure and vizualize data they have.</p>
+										<a href="https://github.com/datalexis/Air-pollution-indicators" class="special">See more</a>
+										<a href="https://public.tableau.com/views/Airpollutionindicators_Insight/Tableau_v3?:language=fr-FR&:display_count=n&:origin=viz_share_link" class=""special">See the viz</a>
 									</div>
 								</div>
 							</section>
