--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="https://public.tableau.com/views/Airpollutionindicators_Insight/Tableau_v3?:language=fr-FR&:display_count=n&:origin=viz_share_link" class="image"><img src="images/projects/Air pollution indicators.png" alt="" /></a>
+									<a href="https://public.tableau.com/views/Airpollutionindicators_Insight/Tableau_v3?:language=fr-FR&:display_count=n&:origin=viz_share_link" class="image"><img src="images/Projects/Air pollution indicators.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Air quality monitoring</h2>
 										<p>This work takes part inside a european project in order to determine elements available to make a outdoor pollution map at an european level. 
@@ -74,11 +74,13 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/Projects/DB3_SC1.png" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Tempus adipiscing</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">Self-build customer database</h2>
+										<p>My first dive into the world of databases!
+											 The point was to create a system that would limit data inconsistency and data redundancy and following a workflow in compliance with quality standards and existing procedures.
+											 At the end, this project leads to a little Access database and become a small homemade ERP. </p>
+										<a href="https://github.com/datalexis/Self-build-customer-database" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
