--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 										<p>My first dive into the world of databases!
 											 The point was to create a system that would limit data inconsistency and data redundancy and following a workflow in compliance with quality standards and existing procedures.
 											 At the end, this project leads to a little Access database and become a small homemade ERP. </p>
-										<a href="https://github.com/datalexis/Self-build-customer-database" class="special">Learn more</a>
+										<a href="https://github.com/datalexis/Self-build-customer-database" class="special">See more</a>
 									</div>
 								</div>
 							</section>
